# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md
src/: fragment.shader  glad.c  main.cpp  vertex.shader
